Fix layout issue causing gap on mobile
Fix #63
Close #64

--- a/themes/documentation/source/core/css/footer.css
+++ b/themes/documentation/source/core/css/footer.css
@@ -19,7 +19,6 @@ footer {
     align-items: flex-start;
     flex-wrap: wrap;
     flex-direction: column;
-    margin: 0 3rem;
 }
 
 @media (min-width: 32em) {
